<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ficha"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="eldon.lafundacion.eldonapp.FichaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <LinearLayout
            android:id="@+id/layoutFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp">

            <ImageView
                android:id="@+id/ivFotoReg"
                android:layout_width="82dp"
                android:layout_height="84dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:src="@mipmap/ic_launcher" />
            />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/nombreReg"
                    android:textStyle="bold" />

                <AutoCompleteTextView
                    android:id="@+id/etNombreReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombreHint"
                    android:inputType="text"
                    android:text="" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/edadReg"
                    android:textStyle="bold" />

                <AutoCompleteTextView
                    android:id="@+id/etEdadReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edadHint"
                    android:inputType="number"
                    android:text="" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numeroReg"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/etNumeroReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numeroHint"
                android:inputType="number"
                android:text="" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/actividadReg"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/etActivReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/actividadHint"
                android:inputType="textMultiLine"
                android:text="" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/expReg"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/etExpReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/expHint"
                android:inputType="textMultiLine"
                android:text="" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/adicionalReg"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/etAdicionalReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/adicionalHint"
                android:inputType="textMultiLine"
                android:text="" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
